      mode"
    - Refresh "lockdown: Refer to Debian wiki until manual page exists"
    - Drop all other lockdown patches
    - Enable SECURITY_LOCKDOWN_LSM, LOCK_DOWN_KERNEL_FORCE_NONE,
      LOCK_DOWN_IN_EFI_SECURE_BOOT
  * [armel/marvell] lockdown: Disable Lockdown as it now selects MODULE_SIG
  * [amd64] Update "x86: Make x32 syscall support conditional …" for 5.4

  [ Romain Perier ]
  * Rebased the following patches onto 5.4.x:
    - debian/version.patch
    - debian/ia64-hardcode-arch-script-output.patch
    - bugfix/all/
      radeon-amdgpu-firmware-is-required-for-drm-and-kms-on-r600-onward.patch
    - features/all/aufs5/aufs5-mmap.patch
    - features/all/aufs5/aufs5-standalone.patch
    - features/x86/
      intel-iommu-add-kconfig-option-to-exclude-igpu-by-default.patch
    - bugfix/all/fs-add-module_softdep-declarations-for-hard-coded-cr.patch
    - debian/revert-objtool-fix-config_stack_validation-y-warning.patch
    - features/all/db-mok-keyring/
      0003-MODSIGN-checking-the-blacklisted-hash-before-loading-a-kernel-module
      .patch
    - bugfix/all/tools-perf-man-date.patch
    - bugfix/all/usbip-fix-misuse-of-strncpy.patch
    - bugfix/all/partially-revert-usb-kconfig-using-select-for-usb_co.patch

  [ Bastian Blank ]
  * [amd64/cloud-amd64] Re-enable RTC drivers. (closes: #931341)

  [ Thomas W ]
  * [x86] Enable missing modules and setting:
    CONFIG_HUAWEI_WMI
    CONFIG_I2C_MULTI_INSTANTIATE
    CONFIG_INTEL_TURBO_MAX_3

  [ John Paul Adrian Glaubitz ]
  * [m68k] Enable CONFIG_PATA_BUDDHA as module

 -- Ben Hutchings <ben@decadent.org.uk>  Wed, 23 Oct 2019 18:32:15 +0100

linux (5.3.7-1) unstable; urgency=medium

  * New upstream stable update:
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.3
    https://www.kernel.org/pub/linux/kernel/v5.x/ChangeLog-5.3.4
    - mISDN: enforce CAP_NET_RAW for raw sockets (CVE-2019-17055)
    - appletalk: enforce CAP_NET_RAW for raw sockets (CVE-2019-17054)