@@ -31,6 +31,7 @@ linux (5.4~rc7-1~exp1) UNRELEASED; urgency=medium
       LOCK_DOWN_IN_EFI_SECURE_BOOT
   * [armel/marvell] lockdown: Disable Lockdown as it now selects MODULE_SIG
   * [amd64] Update "x86: Make x32 syscall support conditional …" for 5.4
+  * debian/lib/python/debian_linux/abi.py: Add support for symbol namespaces
 
   [ Romain Perier ]
   * Rebased the following patches onto 5.4.x:
